result text убрала

--- a/public/quiz.html
+++ b/public/quiz.html
@@ -88,7 +88,7 @@
         </div>
 
         <button id="next-button">Далее</button>
-        <p id="result-text">result-text</p>
+        <p id="result-text"></p>
         <button id="answer-button" onClick="refreshPage()">Пройти ещё раз</button>
     </div>
 
